--- a/src/components/main-content/style.less
+++ b/src/components/main-content/style.less
@@ -53,3 +53,15 @@
     }
   }
 }
+@media (max-width: 991px) {
+
+  :host-context(.navigation-open) {
+    display: flex !important;
+    flex-direction: column;
+    flex-basis: 0;
+
+    > ::content section {
+      display: none;
+    }
+  }
+}
