--- a/src/components/main-navigation/style.less
+++ b/src/components/main-navigation/style.less
@@ -273,10 +273,10 @@
   }
 
   :host-context(.navigation-open) {
+    height: 100% !important;
 
     > .navbar-default {
       display: block;
-      height: 100vh;
     }
   }
 }
